fix: update GitHub links to use the correct repository path

--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -42,7 +42,7 @@
   <h3>Desktop</h3>
   <p>Nostria is also accessible as desktop app:</p>
   <ul>
-    <li><a href="https://github.com/sondreb/nostria/releases" target="_blank" rel="noopener noreferrer">Downloads</a>
+    <li><a href="https://github.com/nostria-app/nostria/releases" target="_blank" rel="noopener noreferrer">Downloads</a>
     </li>
   </ul>
 
@@ -59,7 +59,7 @@
     <h3>Useful Links</h3>
     <mat-list>
       <mat-list-item>
-        <a href="https://github.com/sondreb/nostria" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/nostria-app/nostria" target="_blank" rel="noopener noreferrer">
           <mat-icon>code</mat-icon>
           GitHub Repository
         </a>
@@ -71,7 +71,7 @@
         </a>
       </mat-list-item>
       <mat-list-item>
-        <a href="https://github.com/sondreb/nostria/issues" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/nostria-app/nostria/issues" target="_blank" rel="noopener noreferrer">
           <mat-icon>bug_report</mat-icon>
           Report Issues
         </a>
