refactor(logger): fix all build warnings and remove debug overlay functionality and related components

--- a/src/app/components/start-chat-dialog/start-chat-dialog.component.html
+++ b/src/app/components/start-chat-dialog/start-chat-dialog.component.html
@@ -90,8 +90,10 @@
           <mat-spinner diameter="20"></mat-spinner>
           <span>Discovering relays...</span>
           } @else {
-          <mat-icon>wifi_find</mat-icon>
-          <span>Discover relays</span>
+          <ng-container>
+            <mat-icon>wifi_find</mat-icon>
+            <span>Discover relays</span>
+          </ng-container>
           }
         </button>
       </div>
