--- a/src/app/pages/people/people.component.scss
+++ b/src/app/pages/people/people.component.scss
@@ -6,6 +6,10 @@
   background-color: var(--mat-sys-surface);
 }
 
+.people-container {
+  padding: 1rem;
+}
+
 .people-header {
   padding: 1rem;
   display: flex;
