--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -37,7 +37,7 @@
                 </button> -->
                 }
 
-                <button mat-stroked-button color="primary" (click)="layoutService.openSendMessage(currentPubkey())">
+                <button class="hide-small" mat-stroked-button color="primary" (click)="layoutService.openSendMessage(currentPubkey())">
                     <mat-icon>message</mat-icon> Message
                 </button>
                 }
