--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -7,7 +7,7 @@
   border-radius: 0; // Removed border radius
   margin-bottom: 0; // Removed margin
   transition: background-color 0.2s;
-  width: 100%;
+  // width: 100%;
   flex-shrink: 0; // Prevent shrinking in flex layouts
   touch-action: pan-y; // Enable touch scrolling in vertical direction
   // -webkit-overflow-scrolling: touch; // For better iOS scroll performance
@@ -77,7 +77,9 @@
     mat-spinner {
       margin: 0;
     }
-  }  .user-profile-content {
+  }  
+  
+  .user-profile-content {
     flex: 1;
     min-width: 0; // Enable text truncation
     margin-left: 0; // Removed margin
@@ -105,6 +107,12 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    word-break: break-all;
+  }
+
+  .user-profile-details {
+    font-size: 0.8rem;
+    color: var(--mat-sys-on-surface);
   }
 
   .user-profile-about {
@@ -254,10 +262,15 @@
     box-shadow: var(--mat-sys-level1);
     border-radius: 8px;
     overflow: hidden;
+    box-sizing: border-box;
+
+    :hover {
+      background-color: var(--mat-sys-secondary-container);
+    }
     
     .user-profile-container {
       padding: 16px;
-      flex-direction: column;
+      flex-direction: row;
       align-items: flex-start;
     }
     
@@ -269,7 +282,6 @@
     
     .user-profile-content {
       margin-left: 0;
-      width: 100%;
     }
   }
 
@@ -375,7 +387,6 @@
     .user-profile-content {
       margin: 0; // Removed all margins
       text-align: center;
-      width: 100%;
     }
   }
 
