--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -68,7 +68,7 @@
 
   <!-- Author Section -->
   <section class="article-author">
-    <app-user-profile [pubkey]="authorPubkey()" mode="tiles"></app-user-profile>
+    <app-user-profile [pubkey]="authorPubkey()" mode="list"></app-user-profile>
   </section>
 
   <main class="article-content">
