--- a/src/app/pages/profile/profile-header/profile-header.component.scss
+++ b/src/app/pages/profile/profile-header/profile-header.component.scss
@@ -270,7 +270,7 @@
 .profile-bio {
     margin: 16px 0;
     white-space: pre-wrap;
-    font-size: 14px;
+    font-size: 0.9rem;
     line-height: 1.5;
 }
 
