make loading-overlay component to be shown on top of sidebar (e.g. on profile media screen)

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -66,6 +66,11 @@ mat-sidenav-content {
 
 .sidenav {
   width: 250px;
+  
+  // Adjust for mobile navigation
+  @media (min-width: 599px) {
+    z-index: 0 !important;
+  }
 }
 
 .active-link {
