--- a/src/app/pages/feeds/feeds.component.scss
+++ b/src/app/pages/feeds/feeds.component.scss
@@ -1,5 +1,9 @@
 // Component-specific styles here
 
+app-user-profile {
+  padding: 0.4rem;
+}
+
 .home-container {
   display: flex;
   flex-direction: column;
