--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -3,49 +3,59 @@
 <app-event [event]="event()"></app-event>
 
 <div class="reactions">
-    @for(reaction of reactions(); track reaction.emoji) {
+  @for (reaction of reactions(); track reaction.emoji) {
     <div class="reaction">
-        <span class="emoji">{{ reaction.emoji }}</span>
-        <span class="count">{{ reaction.count }}</span>
+      <span class="emoji">{{ reaction.emoji }}</span>
+      <span class="count">{{ reaction.count }}</span>
     </div>
-    }
+  }
 </div>
 
 @if (reposts()) {
-    <mat-icon>repeat</mat-icon>
-    {{ reposts().length }}
+  <mat-icon>repeat</mat-icon>
+  {{ reposts().length }}
 }
 
-@if (error() ) { 
-    <div class="warn">
-        {{ error() }}
-    </div>
+@if (error()) {
+  <div class="warn">
+    {{ error() }}
+  </div>
 }
 
 <div class="replies-section">
-    @for(threadedEvent of threadedReplies(); track threadedEvent.event.id) {
-        <ng-container [ngTemplateOutlet]="replyTemplate" [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"></ng-container>
-    }
+  @for (threadedEvent of threadedReplies(); track threadedEvent.event.id) {
+    <ng-container
+      [ngTemplateOutlet]="replyTemplate"
+      [ngTemplateOutletContext]="{ threadedEvent: threadedEvent }"
+    ></ng-container>
+  }
 </div>
 
 <ng-template #replyTemplate let-threadedEvent="threadedEvent">
-    <div class="threaded-reply" [style.margin-left.px]="threadedEvent.level * 24">
-        <app-event [event]="threadedEvent.event"></app-event>
-        
-        @for(childReply of threadedEvent.replies; track childReply.event.id) {
-            <ng-container [ngTemplateOutlet]="replyTemplate" [ngTemplateOutletContext]="{ threadedEvent: childReply }"></ng-container>
-        }
-        
-        @if (threadedEvent.hasMoreReplies && threadedEvent.deepestReplyId) {
-            <div class="view-more-replies" [style.margin-left.px]="(threadedEvent.level + 1) * 24">
-                <button 
-                    mat-stroked-button 
-                    class="view-more-button"
-                    (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)">
-                    <mat-icon>expand_more</mat-icon>
-                    View more replies
-                </button>
-            </div>
-        }
-    </div>
+  <div class="threaded-reply" [style.margin-left.px]="threadedEvent.level * 24">
+    <app-event [event]="threadedEvent.event"></app-event>
+
+    @for (childReply of threadedEvent.replies; track childReply.event.id) {
+      <ng-container
+        [ngTemplateOutlet]="replyTemplate"
+        [ngTemplateOutletContext]="{ threadedEvent: childReply }"
+      ></ng-container>
+    }
+
+    @if (threadedEvent.hasMoreReplies && threadedEvent.deepestReplyId) {
+      <div
+        class="view-more-replies"
+        [style.margin-left.px]="(threadedEvent.level + 1) * 24"
+      >
+        <button
+          mat-stroked-button
+          class="view-more-button"
+          (click)="onViewMoreReplies(threadedEvent.deepestReplyId!)"
+        >
+          <mat-icon>expand_more</mat-icon>
+          View more replies
+        </button>
+      </div>
+    }
+  </div>
 </ng-template>
