feat: implement reposts for kind:1

--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -11,9 +11,13 @@
   }
 </div>
 
-@if (reposts()) {
-  <mat-icon>repeat</mat-icon>
-  {{ reposts().length }}
+@if (app.enabledFeature('beta')) {
+  @if (reposts()) {
+    <button matButton (click)="repostNote()">
+      <mat-icon>repeat</mat-icon>
+      <span>{{ reposts().length }}</span>
+    </button>
+  }
 }
 
 @if (error()) {
