--- a/src/app/pages/profile/details/details.component.html
+++ b/src/app/pages/profile/details/details.component.html
@@ -1,100 +1,93 @@
 <div class="following-container" @slideInOut #followingContainer>
   <div class="following-header" @profileShrink>
-    <button mat-icon-button class="back-button" (click)="goBack()" aria-label="Back">
+    <button
+      mat-icon-button
+      class="back-button"
+      (click)="goBack()"
+      aria-label="Back"
+    >
       <mat-icon>arrow_back</mat-icon>
     </button>
 
     <div class="profile-mini">
       @if (userProfile(); as profile) {
-      <div class="profile-mini-avatar">
-        @if (profile.picture) {
-        <img [src]="profile.picture" alt="Profile picture">
-        } @else {
-        <mat-icon>account_circle</mat-icon>
-        }
-      </div>
-      <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
+        <div class="profile-mini-avatar">
+          @if (profile.picture) {
+            <img [src]="profile.picture" alt="Profile picture" />
+          } @else {
+            <mat-icon>account_circle</mat-icon>
+          }
+        </div>
+        <h1 class="profile-mini-name">{{ profile.name }}'s Following</h1>
       } @else {
-      <div class="profile-mini-avatar">
-        <mat-icon>account_circle</mat-icon>
-      </div>
-      <h1 class="profile-mini-name">User Details</h1>
+        <div class="profile-mini-avatar">
+          <mat-icon>account_circle</mat-icon>
+        </div>
+        <h1 class="profile-mini-name">User Details</h1>
       }
     </div>
   </div>
 
   <div class="info-container">
     @if (info()) {
+      @if (info()['hasRelayList']) {
+        <div><mat-icon>thumb_up</mat-icon> Has Relay List</div>
+      }
 
-    @if (info()['hasRelayList']) {
-    <div>
-      <mat-icon>thumb_up</mat-icon> Has Relay List
-    </div>
-    }
+      @if (info()['hasFollwingList']) {
+        <div><mat-icon>thumb_down</mat-icon> Has Following List</div>
+      }
 
-    @if (info()['hasFollwingList']) {
-    <div>
-      <mat-icon>thumb_down</mat-icon> Has Following List
-    </div>
-    }
+      @if (info()['foundOnDiscoveryRelays']) {
+        <div><mat-icon>thumb_up</mat-icon> Found on Discovery Relays</div>
+      }
 
-    @if (info()['foundOnDiscoveryRelays']) {
-    <div>
-      <mat-icon>thumb_up</mat-icon> Found on Discovery Relays
-    </div>
-    }
+      @if (info()['foundOnAccountRelays']) {
+        <div><mat-icon>thumb_down</mat-icon> Found on Account Relays</div>
+      }
 
-    @if (info()['foundOnAccountRelays']) {
-    <div>
-      <mat-icon>thumb_down</mat-icon> Found on Account Relays
-    </div>
-    }
+      @if (info()['foundMetadataOnUserRelays']) {
+        <div><mat-icon>thumb_up</mat-icon> Found Profile on User Relays</div>
+      }
 
-    @if (info()['foundMetadataOnUserRelays']) {
-    <div>
-      <mat-icon>thumb_up</mat-icon> Found Profile on User Relays
-    </div>
+      @if (info()['foundMetadataOnAccountRelays']) {
+        <div>
+          <mat-icon>thumb_down</mat-icon> Found Profile on Account Relays
+        </div>
+      }
+
+      @if (info()['hasEmptyFollowingList']) {
+        <div>
+          <mat-icon>thumb_down</mat-icon> Has empty following list and no relay
+          list. Impossible to find profile.
+        </div>
+      }
+
+      @if (info()['foundZeroRelaysOnAccountRelays']) {
+        <div><mat-icon>thumb_down</mat-icon> Unable to find user relays.</div>
+      }
     }
 
     @if (info()['foundMetadataOnAccountRelays']) {
-    <div>
-      <mat-icon>thumb_down</mat-icon> Found Profile on Account Relays
-    </div>
-    }
-
-    @if (info()['hasEmptyFollowingList']) {
-    <div>
-      <mat-icon>thumb_down</mat-icon> Has empty following list and no relay list. Impossible to find profile.
-    </div>
-    }
-
-    @if (info()['foundZeroRelaysOnAccountRelays']) {
-    <div>
-      <mat-icon>thumb_down</mat-icon> Unable to find user relays.
-    </div>
-    }
-
-    }
-
-
-    @if (info()['foundMetadataOnAccountRelays']) {
-    <div>
-      <button mat-flat-button (click)="broadcastProfile()">Broadcast this profile to the user's relays</button>
-    </div>
+      <div>
+        <button mat-flat-button (click)="broadcastProfile()">
+          Broadcast this profile to the user's relays
+        </button>
+      </div>
     }
 
     @if (info()['hasRelayList'] && !info()['foundOnDiscoveryRelays']) {
-    <div>
-      <button mat-flat-button (click)="broadcastRelayList()">Broadcast this profile's Relay List to the Discovery Relays</button>
-    </div>
+      <div>
+        <button mat-flat-button (click)="broadcastRelayList()">
+          Broadcast this profile's Relay List to the Discovery Relays
+        </button>
+      </div>
     }
-
 
     <!-- <br><br><br><br>
 
     {{ info() | json }} -->
   </div>
-
 
   <!--
   <mat-tab-group class="following-tabs" [selectedIndex]="selectedTabIndex()" (selectedIndexChange)="onTabChanged($event)" animationDuration="300ms">
@@ -119,10 +112,10 @@
             <p>This user is not following anyone.</p>
           </div>
         } @else {
-          <cdk-virtual-scroll-viewport 
-            class="virtual-scroll-viewport" 
+          <cdk-virtual-scroll-viewport
+            class="virtual-scroll-viewport"
             [itemSize]="itemSize"
-            [minBufferPx]="minBufferPx" 
+            [minBufferPx]="minBufferPx"
             [maxBufferPx]="maxBufferPx">
             <mat-list class="full-width-list">
               @for (user of followingList(); track user.id) {
@@ -133,7 +126,7 @@
         }
       </div>
     </mat-tab>
-    
+
     <mat-tab class="following-tab" label="Mutual Connections">
       <div class="following-content">
         @if (mutualConnectionsList().length === 0) {
@@ -142,10 +135,10 @@
             <p>No mutual connections found.</p>
           </div>
         } @else {
-          <cdk-virtual-scroll-viewport 
-            class="virtual-scroll-viewport" 
+          <cdk-virtual-scroll-viewport
+            class="virtual-scroll-viewport"
             [itemSize]="itemSize"
-            [minBufferPx]="minBufferPx" 
+            [minBufferPx]="minBufferPx"
             [maxBufferPx]="maxBufferPx">
             <mat-list>
               @for (user of mutualConnectionsList(); track user.id) {
