--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -1,228 +1,302 @@
 <div class="profile-header-container" [class.compact]="compact()">
-    @if (!compact()) {
-    <div class="profile-banner" [class.clickable]="profile()?.data.banner"
-        [style.background-image]="profile()?.data.banner ? 'url(' + profile()!.data.banner + ')' : getDefaultBanner()"
-        (click)="profile()?.data.banner && layout.openProfileBanner(profile()!)">
+  @if (!compact()) {
+    <div
+      class="profile-banner"
+      [class.clickable]="profile()?.data.banner"
+      [style.background-image]="
+        profile()?.data.banner
+          ? 'url(' + profile()!.data.banner + ')'
+          : getDefaultBanner()
+      "
+      (click)="profile()?.data.banner && layout.openProfileBanner(profile()!)"
+    ></div>
+  }
+  <div
+    class="profile-info-container"
+    [class.compact]="compact()"
+    [class.mobile]="layoutService.isHandset()"
+  >
+    <div
+      class="profile-avatar"
+      [class.clickable]="profile()?.data.picture"
+      [class.mobile]="layoutService.isHandset()"
+      (click)="profile()?.data.picture && layout.openProfilePicture(profile()!)"
+    >
+      @if (profile()?.data.picture) {
+        <img
+          [src]="profile()!.data.picture"
+          alt="Profile picture"
+          class="avatar-image"
+        />
+      } @else {
+        <mat-icon class="default-avatar">account_circle</mat-icon>
+      }
     </div>
-    }
-    <div class="profile-info-container" [class.compact]="compact()" [class.mobile]="layoutService.isHandset()">
-        <div class="profile-avatar" [class.clickable]="profile()?.data.picture"
-            [class.mobile]="layoutService.isHandset()"
-            (click)="profile()?.data.picture && layout.openProfilePicture(profile()!)">
-            @if (profile()?.data.picture) {
-            <img [src]="profile()!.data.picture" alt="Profile picture" class="avatar-image">
-            } @else {
-            <mat-icon class="default-avatar">account_circle</mat-icon>
-            }
-        </div>
 
-        <div class="profile-info" [class.compact]="compact()">
-
-            <div class="profile-menu-actions">
-
-
-                @if (isOwnProfile()) {
-                <button mat-flat-button routerLink="edit">
-                    <mat-icon>edit</mat-icon> Edit Profile
-                </button>
-                } @else {
-
-                @if(!isFollowing()) {
-                <button mat-flat-button (click)="followUser()">
-                    <mat-icon>person_add</mat-icon> Follow
-                </button>
-                } @else {
-                <!-- <button mat-flat-button color="warn" (click)="unfollowUser()">
+    <div class="profile-info" [class.compact]="compact()">
+      <div class="profile-menu-actions">
+        @if (isOwnProfile()) {
+          <button mat-flat-button routerLink="edit">
+            <mat-icon>edit</mat-icon> Edit Profile
+          </button>
+        } @else {
+          @if (!isFollowing()) {
+            <button mat-flat-button (click)="followUser()">
+              <mat-icon>person_add</mat-icon> Follow
+            </button>
+          } @else {
+            <!-- <button mat-flat-button color="warn" (click)="unfollowUser()">
                     <mat-icon>person_remove</mat-icon> Unfollow
                 </button> -->
-                }
+          }
 
-                <button mat-stroked-button (click)="layoutService.openSendMessage(currentPubkey())">
-                    <mat-icon>message</mat-icon> Message
-                </button>
-                }
+          <button
+            mat-stroked-button
+            (click)="layoutService.openSendMessage(currentPubkey())"
+          >
+            <mat-icon>message</mat-icon> Message
+          </button>
+        }
 
-                <button mat-icon-button class="profile-menu-button" [matMenuTriggerFor]="profileMenu">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-            </div>
+        <button
+          mat-icon-button
+          class="profile-menu-button"
+          [matMenuTriggerFor]="profileMenu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+      </div>
 
+      <h1 class="profile-name">
+        {{ name() }}
+        @if (isFavorite()) {
+          <mat-icon class="favorite-indicator" matTooltip="Favorite User"
+            >star</mat-icon
+          >
+        }
+      </h1>
 
-            <h1 class="profile-name">
-                {{ name() }}
-                @if (isFavorite()) {
-                <mat-icon class="favorite-indicator" matTooltip="Favorite User">star</mat-icon>
-                }
-            </h1>
+      <div class="profile-item pointer" title="{{ npub() }}">
+        <mat-icon>key</mat-icon>
+        <span
+          (mouseenter)="showProfileQrCodeHandler()"
+          (mouseleave)="hideProfileQrCodeHandler()"
+          (click)="toggleProfileQrCodeHandler()"
+          >{{ npub() }}</span
+        >
+      </div>
 
-            <div class="profile-item pointer" title="{{ npub() }}">
-                <mat-icon>key</mat-icon>
-                <span (mouseenter)="showProfileQrCodeHandler()" (mouseleave)="hideProfileQrCodeHandler()"
-                    (click)="toggleProfileQrCodeHandler()">{{ npub() }}</span>
-            </div>
-
-            @if (showProfileQrCode()) {
-            <div class="qr-code-container">
-                <qr-code [qrdata]="'npub:' + npub()!" [width]="256" [errorCorrectionLevel]="'medium'"></qr-code>
-            </div>
-            }
-
-            @if (!compact() && profile()) {
-
-            @let verifiedId = verifiedIdentifier();
-
-            @if (verifiedId.value) {
-            <div class="profile-item" title="{{ verifiedId.status }}">
-                @if (verifiedId.valid) {
-                <mat-icon class="verified-icon">verified</mat-icon>
-                } @else {
-                <mat-icon class="verified-icon verified-icon-error">verified_off</mat-icon>
-                }
-                <span [class.strikethrough]="!verifiedId.valid">{{ verifiedId.value }}</span>
-            </div>
-            }
-
-            @let lightningAddress = profile()?.data.lud16 || profile()?.data.lud06;
-
-            @if (lightningAddress) {
-            <div class="profile-item lightning-item">
-                <mat-icon>⚡️</mat-icon>
-                <span (mouseenter)="showQrCodeHandler()" (mouseleave)="hideQrCodeHandler()"
-                    (click)="toggleQrCodeHandler()">{{ lightningAddress }}</span>
-
-            </div>
-
-            @if (showQrCode()) {
-            <div class="qr-code-container">
-                <qr-code [qrdata]="lightningAddress" [width]="256" [errorCorrectionLevel]="'medium'"></qr-code>
-            </div>
-            }
-            }
-            }
-
-            @if (!compact() && profile()?.data.website) {
-            <div class="profile-item" title="{{ profile()!.data.website }}">
-                <mat-icon>link</mat-icon>
-                <span><a [href]="profile()!.data.website" target="_blank" rel="noopener noreferrer">{{
-                        profile()!.data.website}}</a></span>
-            </div>
-            }
-
-            @if (!compact() && profile()?.data.about) {
-            <div class="profile-bio">{{ profile()!.data.about }}</div>
-            }
-
-            <div class="profile-extra-info">
-
-                @if (!compact()) {
-                <a class="following-count" [routerLink]="'following'" [queryParamsHandling]="'preserve'">
-                    Following {{ profileState.followingList().length }}
-                </a>
-
-                @if (profileState.relay?.userRelaysFound()) {
-                <a class="following-count" [routerLink]="'relays'" [queryParamsHandling]="'preserve'">
-                    Relays {{ profileState.relay?.relayUrls?.length }}
-                </a>
-                } @else {
-                <span class="inline-error">
-                    <mat-icon>error</mat-icon>&nbsp;
-                    No relays found!
-                </span>
-                }
-                }
-
-            </div>
-
-            <mat-menu #profileMenu="matMenu">
-                @if (!isOwnProfile()) {
-                @if(!isFollowing()) {
-                <button mat-menu-item (click)="followUser()">
-                    <mat-icon>person_add</mat-icon>
-                    <span>Follow</span>
-                </button>
-                } @else {
-                <button mat-menu-item (click)="unfollowUser()">
-                    <mat-icon>person_remove</mat-icon>
-                    <span>Unfollow</span>
-                </button>
-                }
-
-                <button mat-menu-item (click)="toggleFavorite()">
-                    <mat-icon>{{ isFavorite() ? 'heart_minus' : 'heart_plus' }}</mat-icon>
-                    <span>{{ isFavorite() ? 'Unfavorite' : 'Favorite' }}</span>
-                </button>
-                }
-
-                @if (isOwnProfile()) {
-                <button mat-menu-item routerLink="edit" [queryParamsHandling]="'preserve'">
-                    <mat-icon>edit</mat-icon>
-                    <span>Edit Profile</span>
-                </button>
-                }
-
-                <button mat-menu-item (click)="layoutService.openSendMessage(currentPubkey())">
-                    <mat-icon>message</mat-icon>
-                    <span>Message</span>
-                </button>
-
-                <button mat-menu-item [matMenuTriggerFor]="copyMenu">
-                    <mat-icon>content_copy</mat-icon>
-                    <span>Copy</span>
-                </button>
-
-                <button mat-menu-item [matMenuTriggerFor]="shareMenu">
-                    <mat-icon>share</mat-icon>
-                    <span>Share</span>
-                </button>
-
-                <button mat-menu-item routerLink="details" [queryParamsHandling]="'preserve'">
-                    <mat-icon>info</mat-icon>
-                    <span>Details</span>
-                </button>
-
-                @if (!isOwnProfile()) {
-                <mat-divider></mat-divider>
-                <button mat-menu-item (click)="muteUser()">
-                    <mat-icon>notifications_off</mat-icon>
-                    <span>Mute</span>
-                </button>
-                <button mat-menu-item (click)="blockUser()">
-                    <mat-icon>block</mat-icon>
-                    <span>Block</span>
-                </button>
-                }
-            </mat-menu>
-
-            <mat-menu #copyMenu="matMenu">
-                <button mat-menu-item (click)="layout.copyToClipboard(this.npub(), 'npub')">
-                    <span>Identifier (npub)</span>
-                </button>
-                <button mat-menu-item (click)="layout.copyToClipboard(this.currentPubkey(), 'hex')">
-                    <span>Identifier (hex)</span>
-                </button>
-                <button mat-menu-item (click)="layout.copyToClipboard(this.currentPubkey(), 'nprofile')">
-                    <span>Identifier (nprofile)</span>
-                </button>
-                <button mat-menu-item (click)="copyProfileData()">
-                    <span>Profile Data</span>
-                </button>
-                <button mat-menu-item (click)="copyFollowingList()">
-                    <span>Following List</span>
-                </button>
-                <button mat-menu-item (click)="copyRelayList()">
-                    <span>Relay List</span>
-                </button>
-            </mat-menu>
-
-            <mat-menu #shareMenu="matMenu">
-                <button mat-menu-item (click)="layout.shareProfile(this.npub(), this.name())">
-                    <span>Profile</span>
-                </button>
-                <button mat-menu-item (click)="layout.shareProfileUrl(this.npub())">
-                    <span>Profile URL</span>
-                </button>
-            </mat-menu>
+      @if (showProfileQrCode()) {
+        <div class="qr-code-container">
+          <qr-code
+            [qrdata]="'npub:' + npub()!"
+            [width]="256"
+            [errorCorrectionLevel]="'medium'"
+          ></qr-code>
         </div>
+      }
 
+      @if (!compact() && profile()) {
+        @let verifiedId = verifiedIdentifier();
+
+        @if (verifiedId.value) {
+          <div class="profile-item" title="{{ verifiedId.status }}">
+            @if (verifiedId.valid) {
+              <mat-icon class="verified-icon">verified</mat-icon>
+            } @else {
+              <mat-icon class="verified-icon verified-icon-error"
+                >verified_off</mat-icon
+              >
+            }
+            <span [class.strikethrough]="!verifiedId.valid">{{
+              verifiedId.value
+            }}</span>
+          </div>
+        }
+
+        @let lightningAddress = profile()?.data.lud16 || profile()?.data.lud06;
+
+        @if (lightningAddress) {
+          <div class="profile-item lightning-item">
+            <mat-icon>⚡️</mat-icon>
+            <span
+              (mouseenter)="showQrCodeHandler()"
+              (mouseleave)="hideQrCodeHandler()"
+              (click)="toggleQrCodeHandler()"
+              >{{ lightningAddress }}</span
+            >
+          </div>
+
+          @if (showQrCode()) {
+            <div class="qr-code-container">
+              <qr-code
+                [qrdata]="lightningAddress"
+                [width]="256"
+                [errorCorrectionLevel]="'medium'"
+              ></qr-code>
+            </div>
+          }
+        }
+      }
+
+      @if (!compact() && profile()?.data.website) {
+        <div class="profile-item" title="{{ profile()!.data.website }}">
+          <mat-icon>link</mat-icon>
+          <span
+            ><a
+              [href]="profile()!.data.website"
+              target="_blank"
+              rel="noopener noreferrer"
+              >{{ profile()!.data.website }}</a
+            ></span
+          >
+        </div>
+      }
+
+      @if (!compact() && profile()?.data.about) {
+        <div class="profile-bio">{{ profile()!.data.about }}</div>
+      }
+
+      <div class="profile-extra-info">
+        @if (!compact()) {
+          <a
+            class="following-count"
+            [routerLink]="'following'"
+            [queryParamsHandling]="'preserve'"
+          >
+            Following {{ profileState.followingList().length }}
+          </a>
+
+          @if (profileState.relay?.userRelaysFound()) {
+            <a
+              class="following-count"
+              [routerLink]="'relays'"
+              [queryParamsHandling]="'preserve'"
+            >
+              Relays {{ profileState.relay?.relayUrls?.length }}
+            </a>
+          } @else {
+            <span class="inline-error">
+              <mat-icon>error</mat-icon>&nbsp; No relays found!
+            </span>
+          }
+        }
+      </div>
+
+      <mat-menu #profileMenu="matMenu">
+        @if (!isOwnProfile()) {
+          @if (!isFollowing()) {
+            <button mat-menu-item (click)="followUser()">
+              <mat-icon>person_add</mat-icon>
+              <span>Follow</span>
+            </button>
+          } @else {
+            <button mat-menu-item (click)="unfollowUser()">
+              <mat-icon>person_remove</mat-icon>
+              <span>Unfollow</span>
+            </button>
+          }
+
+          <button mat-menu-item (click)="toggleFavorite()">
+            <mat-icon>{{
+              isFavorite() ? 'heart_minus' : 'heart_plus'
+            }}</mat-icon>
+            <span>{{ isFavorite() ? 'Unfavorite' : 'Favorite' }}</span>
+          </button>
+        }
+
+        @if (isOwnProfile()) {
+          <button
+            mat-menu-item
+            routerLink="edit"
+            [queryParamsHandling]="'preserve'"
+          >
+            <mat-icon>edit</mat-icon>
+            <span>Edit Profile</span>
+          </button>
+        }
+
+        <button
+          mat-menu-item
+          (click)="layoutService.openSendMessage(currentPubkey())"
+        >
+          <mat-icon>message</mat-icon>
+          <span>Message</span>
+        </button>
+
+        <button mat-menu-item [matMenuTriggerFor]="copyMenu">
+          <mat-icon>content_copy</mat-icon>
+          <span>Copy</span>
+        </button>
+
+        <button mat-menu-item [matMenuTriggerFor]="shareMenu">
+          <mat-icon>share</mat-icon>
+          <span>Share</span>
+        </button>
+
+        <button
+          mat-menu-item
+          routerLink="details"
+          [queryParamsHandling]="'preserve'"
+        >
+          <mat-icon>info</mat-icon>
+          <span>Details</span>
+        </button>
+
+        @if (!isOwnProfile()) {
+          <mat-divider></mat-divider>
+          <button mat-menu-item (click)="muteUser()">
+            <mat-icon>notifications_off</mat-icon>
+            <span>Mute</span>
+          </button>
+          <button mat-menu-item (click)="blockUser()">
+            <mat-icon>block</mat-icon>
+            <span>Block</span>
+          </button>
+        }
+      </mat-menu>
+
+      <mat-menu #copyMenu="matMenu">
+        <button
+          mat-menu-item
+          (click)="layout.copyToClipboard(this.npub(), 'npub')"
+        >
+          <span>Identifier (npub)</span>
+        </button>
+        <button
+          mat-menu-item
+          (click)="layout.copyToClipboard(this.currentPubkey(), 'hex')"
+        >
+          <span>Identifier (hex)</span>
+        </button>
+        <button
+          mat-menu-item
+          (click)="layout.copyToClipboard(this.currentPubkey(), 'nprofile')"
+        >
+          <span>Identifier (nprofile)</span>
+        </button>
+        <button mat-menu-item (click)="copyProfileData()">
+          <span>Profile Data</span>
+        </button>
+        <button mat-menu-item (click)="copyFollowingList()">
+          <span>Following List</span>
+        </button>
+        <button mat-menu-item (click)="copyRelayList()">
+          <span>Relay List</span>
+        </button>
+      </mat-menu>
+
+      <mat-menu #shareMenu="matMenu">
+        <button
+          mat-menu-item
+          (click)="layout.shareProfile(this.npub(), this.name())"
+        >
+          <span>Profile</span>
+        </button>
+        <button mat-menu-item (click)="layout.shareProfileUrl(this.npub())">
+          <span>Profile URL</span>
+        </button>
+      </mat-menu>
     </div>
+  </div>
 </div>
