--- a/src/app/pages/profile/profile-reads/profile-reads.component.html
+++ b/src/app/pages/profile/profile-reads/profile-reads.component.html
@@ -1,32 +1,49 @@
 <div class="tab-content">
   @if (profileState.articles().length === 0) {
-  <div class="empty-state">
-    <mat-icon>bookmark</mat-icon>
-    <p>No reads to display yet</p>
-  </div>
+    <div class="empty-state">
+      <mat-icon>bookmark</mat-icon>
+      <p>No reads to display yet</p>
+    </div>
   } @else {
-  <div class="reads-list">
-    @for(note of profileState.articles(); track note.event.id) {
-    <mat-card class="note-card" appearance="outlined">
-      <app-user-profile class="user-profile-thread" view="thread" [pubkey]="profileState.currentProfilePubkey()">
-        <a class="date-link" [routerLink]="['/a', note.event.pubkey, utilities.getDTagValueFromEvent(note.event)]" matTooltipPosition="below">
-          {{ note.event.tags | tags:'published_at' }} 
-        </a>
-      </app-user-profile>
-      <mat-card-content>{{note.data}}</mat-card-content>
-      <mat-card-footer class="note-footer">
-        <button mat-icon-button>
-          <mat-icon matTooltip="Reply" matTooltipPosition="below">reply</mat-icon>
-        </button>
-        <button mat-icon-button class="note-footer-right">
-          <mat-icon [matTooltip]="bookmark.getBookmarkTooltip(note.event.id, 'a')" matTooltipPosition="below"
-            (click)="bookmark.toggleBookmark(note.event.id)">
-            {{bookmark.getBookmarkIcon(note.event.id, 'a')}}
-          </mat-icon>
-        </button>
-      </mat-card-footer>
-    </mat-card>
-    }
-  </div>
+    <div class="reads-list">
+      @for (note of profileState.articles(); track note.event.id) {
+        <mat-card class="note-card" appearance="outlined">
+          <app-user-profile
+            class="user-profile-thread"
+            view="thread"
+            [pubkey]="profileState.currentProfilePubkey()"
+          >
+            <a
+              class="date-link"
+              [routerLink]="[
+                '/a',
+                note.event.pubkey,
+                utilities.getDTagValueFromEvent(note.event),
+              ]"
+              matTooltipPosition="below"
+            >
+              {{ note.event.tags | tags: 'published_at' }}
+            </a>
+          </app-user-profile>
+          <mat-card-content>{{ note.data }}</mat-card-content>
+          <mat-card-footer class="note-footer">
+            <button mat-icon-button>
+              <mat-icon matTooltip="Reply" matTooltipPosition="below"
+                >reply</mat-icon
+              >
+            </button>
+            <button mat-icon-button class="note-footer-right">
+              <mat-icon
+                [matTooltip]="bookmark.getBookmarkTooltip(note.event.id, 'a')"
+                matTooltipPosition="below"
+                (click)="bookmark.toggleBookmark(note.event.id)"
+              >
+                {{ bookmark.getBookmarkIcon(note.event.id, 'a') }}
+              </mat-icon>
+            </button>
+          </mat-card-footer>
+        </mat-card>
+      }
+    </div>
   }
 </div>
