--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,63 +1,79 @@
 <div class="profile-page">
   @if (isLoading()) {
-  <div class="profile-loading-container">
-    <div class="profile-loading-content">
-      <!-- Profile skeleton -->
-      <div class="profile-loading-skeleton">
-        <!-- Banner skeleton -->
-        <div class="banner-skeleton"></div>
+    <div class="profile-loading-container">
+      <div class="profile-loading-content">
+        <!-- Profile skeleton -->
+        <div class="profile-loading-skeleton">
+          <!-- Banner skeleton -->
+          <div class="banner-skeleton"></div>
 
-        <!-- Avatar and info skeleton -->
-        <div class="profile-info-skeleton">
-          <div class="avatar-skeleton"></div>
-          <div class="profile-details-skeleton">
-            <div class="name-skeleton"></div>
-            <div class="npub-skeleton"></div>
-            <div class="bio-skeleton"></div>
+          <!-- Avatar and info skeleton -->
+          <div class="profile-info-skeleton">
+            <div class="avatar-skeleton"></div>
+            <div class="profile-details-skeleton">
+              <div class="name-skeleton"></div>
+              <div class="npub-skeleton"></div>
+              <div class="bio-skeleton"></div>
+            </div>
+          </div>
+
+          <!-- Actions skeleton -->
+          <div class="actions-skeleton">
+            <div class="action-button-skeleton"></div>
+            <div class="action-button-skeleton"></div>
           </div>
         </div>
 
-        <!-- Actions skeleton -->
-        <div class="actions-skeleton">
-          <div class="action-button-skeleton"></div>
-          <div class="action-button-skeleton"></div>
+        <!-- Loading spinner and message -->
+        <div class="loading-spinner-section">
+          <mat-spinner diameter="48"></mat-spinner>
+          <p class="loading-message">Loading profile...</p>
+          <p class="loading-submessage">Fetching user data from the network</p>
         </div>
       </div>
-
-      <!-- Loading spinner and message -->
-      <div class="loading-spinner-section">
-        <mat-spinner diameter="48"></mat-spinner>
-        <p class="loading-message">Loading profile...</p>
-        <p class="loading-submessage">Fetching user data from the network</p>
-      </div>
     </div>
-  </div>
   } @else if (error()) {
-  <div class="error-container">
-    <mat-icon>error</mat-icon>
-    <h2>{{ error() }}</h2>
-    <p>The profile you're looking for couldn't be loaded or doesn't exist.</p>
-    <p>The user is likely not found on your Discovery Relays. You can add <a [routerLink]="['/settings']">additional
-        ones</a> and try again.</p>
-    <p class="profile-link-container">
-      <a class="wrap-link" [href]="'https://nostr.at/' + utilities.getNpubFromPubkey(pubkey())" target="_blank"
-        rel="noopener noreferrer">https://nostr.at/{{ utilities.getNpubFromPubkey(pubkey()) }}</a>
-    </p>
-  </div>
+    <div class="error-container">
+      <mat-icon>error</mat-icon>
+      <h2>{{ error() }}</h2>
+      <p>The profile you're looking for couldn't be loaded or doesn't exist.</p>
+      <p>
+        The user is likely not found on your Discovery Relays. You can add
+        <a [routerLink]="['/settings']">additional ones</a> and try again.
+      </p>
+      <p class="profile-link-container">
+        <a
+          class="wrap-link"
+          [href]="'https://nostr.at/' + utilities.getNpubFromPubkey(pubkey())"
+          target="_blank"
+          rel="noopener noreferrer"
+          >https://nostr.at/{{ utilities.getNpubFromPubkey(pubkey()) }}</a
+        >
+      </p>
+    </div>
   }
   @if (!isLoading() && !error()) {
-  <div class="profile-header" [class.compact-header]="isCompactHeader()">
-    <!-- Show banner only when not in compact mode -->
-    @if (!isCompactHeader()) {
-    <div class="profile-banner"
-      [style.background-image]="userMetadata()?.data.banner ? 'url(' + userMetadata()!.data.banner + ')' : getDefaultBanner()">
+    <div class="profile-header" [class.compact-header]="isCompactHeader()">
+      <!-- Show banner only when not in compact mode -->
+      @if (!isCompactHeader()) {
+        <div
+          class="profile-banner"
+          [style.background-image]="
+            userMetadata()?.data.banner
+              ? 'url(' + userMetadata()!.data.banner + ')'
+              : getDefaultBanner()
+          "
+        ></div>
+      }
+      <app-profile-header
+        [profile]="userMetadata()"
+        [pubkey]="pubkey()"
+        [compact]="isCompactHeader()"
+      ></app-profile-header>
     </div>
-    }
-    <app-profile-header [profile]="userMetadata()" [pubkey]="pubkey()" [compact]="isCompactHeader()"></app-profile-header>
-  </div>
 
-  <div class="profile-outlet" [class.mobile]="layoutService.isHandset()">
-    <router-outlet></router-outlet>
-  </div>
+    <div class="profile-outlet" [class.mobile]="layoutService.isHandset()">
+      <router-outlet></router-outlet>
+    </div>
   }
 </div>
